# keybox-core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.cache/clangd/index/: access_manager.c.72224645FB83229A.idx  access_manager.h.AD8CBBFF898D06E8.idx  address.c.B8E868ADBD556699.idx  address.h.E198DC48F16C265D.idx  async.c.D5A8E4BA883C8157.idx  async.h.FB7BF62D72DF2CC9.idx  block.c.718354E321AA815F.idx  block.h.140384795AF156F0.idx  board_lib.c.F27DCE8D0EEBB6D5.idx  board_lib.h.C71090FCEE7BDD61.idx  cloud_manager.c.A9734C5C0977C062.idx  cloud_manager.h.878AD5B87FCCFBB9.idx  coap.h.E7FDE31DF0CE11F3.idx  coap_asn1.c.826EDE35B6F771D0.idx  coap_asn1_internal.h.D295C5932AB838B0.idx  coap_async_internal.h.0DDE671F36ACB4C5.idx  coap_block_internal.h.57BB69BCF9697379.idx  coap_cache.c.D25E33D559777A3C.idx  coap_cache.h.572394F3B5E04A0B.idx  coap_cache_internal.h.9A88A05822FC46B7.idx  coap_config.h.AA3E67CDA541B80F.idx  coap_config_posix.h.57D1BB35DCFBD1A1.idx  coap_debug.c.E7CEC926369173D9.idx  coap_debug.h.D55AF27876C46D77.idx  coap_dtls.h.7ACB9DE6B038309E.idx  coap_dtls_internal.h.948A54BB883483F3.idx  coap_event.c.59722ADACDEE5599.idx  (+86 more)
components/board_lib/: CMakeLists.txt  Kconfig  board_lib.c  ctu.c  gm65.c  ntxfr.c  ntxfr.h
main/: CMakeLists.txt  Kconfig.projbuild  access_manager.c  access_manager.h  cloud_manager.c  cloud_manager.h  led_manager.c  led_manager.h  main.c  report_manager.c  report_manager.h  task_prio.h  ui_manager.c  ui_manager.h  version.c.in  version.h  wifi_manager.c  wifi_manager.h
(+1 files in other folders)
