idf_component_register(SRCS "main.c"
                            "wifi_manager.c"
                            "led_manager.c"
                            "cloud_manager.c"
                            "report_manager.c"
                            "access_manager.c"
                            "version.c"
                    INCLUDE_DIRS ".")
